--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.20.1",
-        "sass-loader": "^8.0.0",
+        "sass": "^1.26.3",
+        "sass-loader": "^8.0.2",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "vue-router": "^3.1.6",
+        "vuetify": "^2.2.22",
+        "vuex": "^3.1.3"
     }
 }
